harbor/harbor-registry_NetworkPolicy_harbor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: registry
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: harbor
    app.kubernetes.io/version: 2.12.0
    helm.sh/chart: harbor-24.0.2
  name: harbor-registry
  namespace: harbor
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 5000
    - port: 8080
    - port: 5001
    - port: 8001
  podSelector:
    matchLabels:
      app.kubernetes.io/component: registry
      app.kubernetes.io/instance: harbor
      app.kubernetes.io/name: harbor
  policyTypes:
  - Ingress
  - Egress
